# AI574_NLP

./: LICENSE  README.md
AI574_NLP/: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
AI574_NLP/ai574_personal/: __init__.py  dataset.py  features.py  plots.py
AI574_NLP/ai574_personal/modeling/: predict.py  train.py
AI574_NLP/notebooks/: webscraper.ipynb
